# waldodao-appchain

./: .gitignore  Cargo.toml  README.md  chain-spec-plain.json
.maintain/docker/: Dockerfile  build-image.sh  create-network.sh  docker-compose.yml  injected-binnary.Dockerfile  start-docker-compose.sh  stop-docker-compose.sh
docs/: functions.md
node/: Cargo.toml
node/res/: octopus-human-readable-testnet.json  octopus-testnet.json
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/chain-extension/: Cargo.toml
pallets/chain-extension/src/: lib.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/wdao-config/: Cargo.toml
pallets/wdao-config/src/: lib.rs
pallets/wdao-nft/: Cargo.toml
pallets/wdao-nft/src/: lib.rs
pallets/wdao-order/: Cargo.toml
pallets/wdao-order/src/: lib.rs
pallets/wdao-orml-currencies/: Cargo.toml
pallets/wdao-orml-currencies/src/: lib.rs
pallets/wdao-orml-nft/: Cargo.toml
pallets/wdao-orml-nft/src/: lib.rs
pallets/wdao-orml-tokens/: Cargo.toml
pallets/wdao-orml-tokens/src/: lib.rs
pallets/wdao-orml-traits/: Cargo.toml
pallets/wdao-orml-traits/src/: account.rs  lib.rs
pallets/wdao-orml-utilities/: Cargo.toml
pallets/wdao-rpc/: Cargo.toml
pallets/wdao-rpc/runtime-api/: Cargo.toml
pallets/wdao-rpc/runtime-api/src/: lib.rs
pallets/wdao-rpc/src/: lib.rs
pallets/wdao-traits/: Cargo.toml
pallets/wdao-traits/contract-types/: Cargo.toml
pallets/wdao-traits/src/: lib.rs
primitives/rpc/debug/: Cargo.toml
primitives/rpc/evm-tracing-events/: Cargo.toml
primitives/rpc/txpool/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs
