[package]
authors = ['Waldo Dao <hello@waldodao.com>']
edition = '2018'
homepage = 'https://waldodao.com'
license = 'Apache-2.0'
name = 'chain-extension'
readme = 'README.md'
repository = 'https://github.com/waldodao/waldodao-appchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = '1.0.130', default-features = false, features = ['derive'], optional = true }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }

sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
pallet-contracts = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }

wdao-traits = { default-features = false, path = "../wdao-traits" }
wdao-nft = { default-features = false, path = "../wdao-nft" }

[features]
default = ['std']
std = [
	"serde/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-randomness-collective-flip/std",
    "pallet-contracts/std",
	"wdao-traits/std",
    "wdao-nft/std",
]
