[package]
authors = ['Waldo Dao <hello@waldodao.com>']
description = "Fungible tokens module that implements `MultiCurrency` trait."
edition = '2018'
homepage = 'https://waldodao.com'
license = 'Apache-2.0'
name = 'wdao-orml-tokens'
readme = 'README.md'
repository = 'https://github.com/waldodao/waldodao-appchain'
version = '0.4.1-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = '1.0.130', default-features = false, features = ['derive'], optional = true }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }

sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
wdao-orml-traits = { version = "0.4.1-dev", default-features = false, path = "../wdao-orml-traits" }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
pallet-elections-phragmen = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
	'sp-std/std',
    "sp-runtime/std",
    'frame-support/std',
    'frame-system/std',
	'wdao-orml-traits/std',

]
