[package]
authors = ['Waldo Dao <hello@waldodao.com>']
description = "Various utilities including `FixedU128` and `LinkedList`."
edition = '2018'
homepage = 'https://waldodao.com'
license = 'Apache-2.0'
name = 'wdao-orml-traits'
repository = 'https://github.com/waldodao/waldodao-appchain'
version = "0.4.1-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = "1.0.136", optional = true }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }

sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }

num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.2"

wdao-orml-utilities = { version = "0.4.1-dev", default-features = false, path = "../wdao-orml-utilities" }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
	'sp-std/std',
    "sp-runtime/std",
    "sp-io/std",
    'frame-support/std',
	"num-traits/std",
	"frame-support/std",
	"wdao-orml-utilities/std",
]
