[package]
authors = ['Waldo Dao <hello@waldodao.com>']
edition = '2018'
homepage = 'https://waldodao.com'
license = 'Apache-2.0'
name = 'wdao-rpc-runtime-api'
readme = 'README.md'
repository = 'https://github.com/waldodao/waldodao-appchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
wdao-traits = { default-features = false, path = "../../wdao-traits" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
	"wdao-traits/std",
]
